<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CHHATTISGARH PDS</string>
    <string name="printsuccess">Print Success</string>
    <string name="printfailed">Print Failed</string>
    <string name="CHHATISGARHPDS">CHHATTISGARH  PDS</string>
    <string name="SET">SET</string>
    <string name="UID_DETAILS">UID DETAILS</string>
    <string name="Start">Start</string>
    <string name="RD"> RD</string>
    <string name="COMMODITY_WEIGHT">COMMODITY WEIGHT</string>
    <string name="COMMODITY_WEIGHING">COMMODITY WEIGHING</string>
    <string name="Iris">I</string>
    <string name="Quit">Quit</string>
    <string name="Settings">Settings</string>
    <string name="Dealer_Details">Downloading Dealer Details</string>
    <string name="NAME">NAME</string>
    <string name="TYPE">TYPE</string>
    <string name="Consent_Form">Consent Form</string>
    <string name="Back">Back</string>
    <string name="Scan_FP">Scan FP</string>
    <string name="Next">NEXT </string>
    <string name="Agree">Agree</string>
    <string name="Disagree">Disagree</string>
    <string name="CASH_PDS">CASH PDS</string>
    <string name="RC_No">RC No</string>
    <string name="Aadhaar">Aadhaar</string>
    <string name="Card_No">Card No.</string>
    <string name="Get_Details">Get Details</string>
    <string name="Home">Home</string>
    <string name="Last_Reciept">Last Reciept</string>
    <string name="Get_Card_Status" translatable="false">Get CardStatus</string>
    <string name="HOME">HOME</string>
    <string name="Issue">Issue</string>
    <string name="Inspection">Inspection</string>
    <string name="Aadhaar_Services">Aadhaar Services</string>
    <string name="Receive_Goods">Receive Goods</string>
    <string name="Reports">Reports</string>
    <string name="Others">Others</string>
    <string name="Uploaddata" translatable="false">Upload Data</string>
    <string name="Logout">Logout</string>
    <string name="ISSUE">ISSUE</string>
    <string name="Cash_PDS">Cash PDS</string>
    <string name="Cashless_PDS">Cashless PDS</string>
    <string name="IMPDS">IMPDS</string>
    <string name="MEMEBER_DETAILS">MEMEBER DETAILS</string>
    <string name="UID">UID</string>
    <string name="Iris1">Iris</string>
    <string name="COMMODITIES">COMMODITIES</string>
    <string name="TotQty">TotQty</string>
    <string name="BalQty">BalQty</string>
    <string name="Rate">Rate</string>
    <string name="issueQty">IssueQty</string>
    <string name="ClBal">ClBal</string>
    <string name="Get">Get</string>
    <string name="Confirm">Confirm</string>
    <string name="CommTot">Comm(Tot)</string>
    <string name="PrevBal">PrevBal</string>
    <string name="AllocQty">AllocQty</string>
    <string name="Price">Price</string>
    <string name="Total">Total</string>
    <string name="Please_connect_to_the_Bluetooth_printer_to_print">Please connect to the Bluetooth printer to print</string>
    <string name="Connect">Connect</string>
    <string name="Print">Print</string>
    <string name="DAILY_SALES_REPORT">DAILY SALES REPORT</string>
    <string name="ddmmyyyy">dd/mm/yyyy</string>
    <string name="View">View</string>
    <string name="Comm">Comm</string>
    <string name="AAY">AAY</string>
    <string name="SFY">SFY</string>
    <string name="PHH">PHH</string>
    <string name="TOTAL">TOTAL</string>
    <string name="CURRENT_STOCK">CURRENT STOCK</string>
    <string name="Scheme">Scheme</string>
    <string name="Stock">Stock</string>
    <string name="CB">CB</string>
    <string name="REPORTS">REPORTS</string>
    <string name="Daily_Sales_Report">Daily Sales Report</string>
    <string name="Stock_Report">Stock Report</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="Device">Device</string>
    <string name="Update">Update</string>
    <string name="Device_Info">Device Info</string>
    <string name="DEVICE">DEVICE</string>
    <string name="Device_ID">Device ID :</string>
    <string name="RD_Service">RD Service :</string>
    <string name="selected_language">Selected Language</string>
    <string name="Set_Language">SET  Language</string>
    <string name="english">ENGLISH</string>
    <string name="hindi">हिंदी</string>
    <string name="DEVICE_INFO">DEVICE INFO</string>
    <string name="UPDATE">UPDATE</string>
    <string name="USB">USB</string>
    <string name="GPRS">GPRS</string>
    <string name="BENEFICIARY_VERIFY">BENEFICIARY VERIFY</string>
    <string name="CardNo">Card No.</string>
    <string name="Aadhaar_No">Aadhaar No. :</string>
    <string name="Ok">Ok</string>
    <string name="Member_ID">Member ID</string>
    <string name="Image">Image</string>
    <string name="ICDS">ICDS</string>
    <string name="AWCID">AWC ID :</string>
    <string name="Details">Details</string>
    <string name="RCNO">RC NO :</string>
    <string name="B1">B1</string>
    <string name="Rd_Service">No RD Service</string>
    <string name="RD_Service_Msg">Fingerprint RD Service Application is not avaliable in Device</string>
    <string name="Please_Check_Device_Internet_Connection">Please Check Device Internet Connection</string>
    <string name="Dealers">Dealers</string>
    <string name="Fetching_Dealers">Fetching Dealers ...</string>
    <string name="DealerDetails">Dealer Details: </string>
    <string name="Application">Application</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Explain_here_why_the_app_needs_permissions">Explain here why the app needs permissions</string>
    <string name="Bio">Bio</string>
    <string name="Please_check_Consent_Form">Please check Consent Form</string>
    <string name="Internet_Connection">No Internet Connection</string>
    <string name="Internet_Connection_Msg">Please check Device Internet Connection and Try again</string>
    <string name="Connection_Error">Connection Error</string>
    <string name="Please_Select_Dealer_Name">Please Select Dealer Name</string>
    <string name="Please_Select_Another_Dealer">Please Select Another Dealer Name</string>
    <string name="Dealer">Dealer</string>
    <string name="Please_wait">Please Wait</string>
    <string name="Do_you_want_to_Cancel">Do you want to Cancel</string>
    <string name="IRIS_login">IRIS login</string>
    <string name="Biometric_login">Biometric  login</string>
    <string name="Biometric">Biometric</string>
    <string name="Password_login">Password login</string>
    <string name="Password">Password</string>
    <string name="Please_Enter_Dealer_Authentication_Password">Please Enter Dealer Authentication Password</string>
    <string name="Dealer_Password">Dealer Password</string>
    <string name="Cancel">Cancel</string>
    <string name="Authenticating">Authenticating...</string>
    <string name="Downloading_Menus">Downloading Menus</string>
    <string name="Dealer_Authentication">Dealer Authentication: </string>
    <string name="RD_SERVICE_ERROR">RD SERVICE ERROR</string>
    <string name="PID_Exception">PID Exception</string>
    <string name="NA">UID is Not Present</string>
    <string name="NA_MSG">Please Select Other Member</string>
    <string name="Battery">Unable To Print Recipt due to Low Battery</string>
    <string name="Battery_Msg"> Please charge the Battery</string>
    <string name="Cashless_PDS_function_is_Not_Available">Cashless PDS function is Not Available</string>
    <string name="IMPDS_function_is_Not_Available">IMPDS function is Not Available</string>
    <string name="Members">Downloading Members Details</string>
    <string name="Fetching_Members">Fetching Members ...</string>
    <string name="Member_Details">Member Details: </string>
    <string name="Please_Enter_a_Valid_Number_RC">Please Enter RC Number</string>
    <string name="Please_Enter_a_Valid_Number_UID">Please Enter 12 digit UID Number</string>
    <string name="Please_Enter_Valid_Number">Please Enter valid UID Number</string>
    <string name="Invalid_ID">Invalid RC ID</string>
    <string name="Invalid_UID">Invalid UID</string>
    <string name="This_function_is_not_Enabled_yet">This function is not Enabled yet</string>
    <string name="Going_Back">Going Back</string>
    <string name="Please_Enter_Your_Ration_ID">Please Enter RC Number</string>
    <string name="Please_Enter_Your_Aadhaar_ID">Please Enter Your Aadhaar ID</string>
    <string name="Do_you_want_to_cancel_Session">Do you want to cancel Session</string>
    <string name="Iris_for_Authentication">Iris for Authentication</string>
    <string name="ScanFP_for_Authentication">ScanFP for Authentication</string>
    <string name="No_Iris_authentication_for_this_member">No Iris authentication for this member</string>
    <string name="NO_Iris">NO Iris</string>
    <string name="No_Biometric_authentication_for_this_member">No Biometric authentication for this member</string>
    <string name="NO_Biometric">NO Biometric</string>
    <string name="Please_Select_Member_Name">Please Select Member Name</string>
    <string name="Member">Member</string>
    <string name="Member_Authentication">Member Authentication: </string>
    <string name="No_RD_Service_Available">No RD Service Available</string>
    <string name="select_your_Commodities_and_give_weights">select your Commodities and give weights</string>
    <string name="Please_Enter_the_required_Weight">Please Enter the required Weight</string>
    <string name="Please_get_Weight_from_Weighing_Machine">Please get Weight from Weighing Machine</string>
    <string name="There_are_no_required_commodity_weights">There are no required commodity weights</string>
    <string name="Enable_Bluetooth_and_pair_your_Device_Manually">Enable Bluetooth and pair your Device Manually</string>
    <string name="Please_Select_USB_or_Bluetooth">Please Select USB or Bluetooth</string>
    <string name="Please_give_Quantity_between_Min_bal_and_Close_bal">Please Enter required Qty less than or equal</string>
    <string name="Please_Issue_Commodity_upto_Bal_Qty_only">Please Issue Commodity upto Bal Qty only</string>
    <string name="Please_Wait">Please Wait...</string>
    <string name="USB_Ready">USB Ready</string>
    <string name="USB_Permission_not_granted">USB Permission not granted</string>
    <string name="No_USB_connected">No USB connected</string>
    <string name="USB_disconnected">USB disconnected</string>
    <string name="USB_device_not_supported">USB device not supported</string>
    <string name="Please_Enter_the_Weight">Please Enter the Weight</string>
    <string name="Socket_creation_failed">Socket creation failed</string>
    <string name="Socket_Exception">Socket Exception</string>
    <string name="NOT_Supported">NOT Supported</string>
    <string name="Disabled">Disabled</string>
    <string name="Enabled">Enabled</string>
    <string name="Scanning">Scanning...</string>
    <string name="Connecting">Connecting...</string>
    <string name="CONNECTED">CONNECTED</string>
    <string name="Connection_Failed">Connection Failed</string>
    <string name="No_Paired_Devices">No Paired Devices</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="PLEASE_PAIR_THE_DEVICE">PLEASE PAIR THE DEVICE</string>
    <string name="Printer_ERROR">Printer ERROR</string>
    <string name="Please_check_your_bluetooth_connection">Please check your bluetooth connection</string>
    <string name="Printer_Error">Printer Error</string>
    <string name="Device_does_not_support_Bluetooth">Device does not support Bluetooth</string>
    <string name="Chhattisgarh">Chhattisgarh</string>
    <string name="Department">Department</string>
    <string name="RECEIPT">RECEIPT</string>
    <string name="FPS_Owner_Name">FPS Owner Name</string>
    <string name="Truck_No">Truck No :</string>
    <string name="RECEIVE_GOODS">RECEIVE GOODS</string>
    <string name="Allot">Allot</string>
    <string name="dispatch">Dispatch</string>
    <string name="Receive">Receive</string>
</resources>