<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activities.HomeActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">


        <TextView
            android:id="@+id/rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/RD"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/TextsizeT"
            android:textStyle="bold" />
        <TextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/TextsizeT"
            android:textStyle="bold"
            android:text="@string/HOME"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/innerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button

                android:id="@+id/issue"
                android:layout_width="@dimen/ButtonW"
                android:layout_height="@dimen/ButtonH"
                android:layout_margin="@dimen/ButtonM"
                android:layout_weight="1"
                android:background="@color/button"
                android:text="@string/Issue"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/TextsizeB"/>
            <Button
                android:id="@+id/inspection"
                android:layout_width="@dimen/ButtonW"
                android:layout_height="@dimen/ButtonH"
                android:layout_margin="@dimen/ButtonM"
                android:layout_weight="1"
                android:background="@color/button"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/Inspection"
                android:textSize="@dimen/TextsizeB"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/aadhaar_services"
                android:layout_width="@dimen/ButtonW"
                android:layout_height="@dimen/ButtonH"
                android:layout_margin="@dimen/ButtonM"
                android:layout_weight="1"
                android:background="@color/button"
                android:textStyle="bold"
                android:text="@string/Aadhaar_Services"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeB"/>

            <Button
                android:id="@+id/receive_goods"
                android:layout_width="@dimen/ButtonW"
                android:layout_height="@dimen/ButtonH"
                android:layout_margin="@dimen/ButtonM"
                android:layout_weight="1"
                android:background="@color/button"
                android:textStyle="bold"
                android:text="@string/Receive_Goods"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeB"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/reports"
                android:layout_width="@dimen/ButtonW"
                android:layout_height="@dimen/ButtonH"
                android:layout_margin="@dimen/ButtonM"
                android:layout_weight="1"
                android:background="@color/button"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/Reports"
                android:textSize="@dimen/TextsizeB"/>
            <Button
                android:id="@+id/others"
                android:layout_width="@dimen/ButtonW"
                android:layout_height="@dimen/ButtonH"
                android:layout_margin="@dimen/ButtonM"
                android:layout_weight="1"
                android:background="@color/button"
                android:textStyle="bold"
                android:text="@string/Others"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeB"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_gravity="center"
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ButtonM"

        android:background="@color/cancel"
        android:textStyle="bold"
        android:text="@string/Logout"
        android:textColor="@color/white"
        android:textSize="@dimen/TextsizeB"/>
</LinearLayout>