<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activities.SettingActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/RD"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/TextsizeT"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/toolbar_title2"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/TextsizeT"
            android:textStyle="bold"
            android:text="@string/SETTINGS"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginHorizontal="250dp"
        android:layout_marginVertical="@dimen/LayoutMV">

        <Button
            android:id="@+id/device"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Device"
            android:textAllCaps="false"
            android:textSize="@dimen/TextsizeB"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/update"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/Update"
            android:textSize="@dimen/TextsizeB"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/deviceinfo"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Device_Info"
            android:textAllCaps="false"
            android:textSize="@dimen/TextsizeB"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/back"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back"
            android:textAllCaps="false"
            android:textSize="@dimen/TextsizeB"
            android:background="@color/cancel"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>