<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/RD"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/TextsizeT"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/RECEIVE_GOODS"
            android:textColor="@color/white"
            android:textSize="@dimen/TextsizeT"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Spinner
            android:id="@+id/truckchit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/ik_blue_white"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:singleLine="true"
            android:spinnerMode="dropdown"
            android:src="@color/green"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_truckno"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/Truck_No"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/TextsizeH"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:padding="@dimen/LayoutP"
            android:weightSum="5">

            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/Comm"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeB"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/Scheme"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeB"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/Allot"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeB"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/dispatch"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeB"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/Receive"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeB"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/LayoutP"
        android:weightSum="2"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/back"
            android:layout_width="@dimen/ButtonW"
            android:layout_height="@dimen/ButtonH"
            android:layout_margin="@dimen/ButtonM"
            android:layout_weight="1"
            android:background="@color/opaque_red"
            android:text="@string/Back"
            android:textColor="@color/white"
            android:textSize="@dimen/TextsizeB"
            android:textStyle="bold" />

        <Button
            android:id="@+id/next"
            android:layout_width="@dimen/ButtonW"
            android:layout_height="@dimen/ButtonH"
            android:layout_margin="@dimen/ButtonM"
            android:layout_weight="1"
            android:background="@color/ok"
            android:text="@string/Next"
            android:textColor="@color/white"
            android:textSize="@dimen/TextsizeB"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>