<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Activities.StockReportActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/RD"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/TextsizeT"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/CURRENT_STOCK"
            android:textColor="@color/white"
            android:textSize="@dimen/TextsizeT"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/LayoutMH"
        android:layout_marginVertical="@dimen/LayoutMV">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/TextsizeP"
                android:text="@string/Comm"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeB"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/TextsizeP"
                android:text="@string/Scheme"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeB"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/TextsizeP"
                android:text="@string/Stock"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeB"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/TextsizeP"
                android:text="@string/Issue"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeB"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="@dimen/TextsizeP"
                android:text="@string/CB"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/TextsizeB"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/my_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/LayoutP"
            android:weightSum="2"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/stock_back"
                android:layout_width="@dimen/ButtonW"
                android:layout_height="@dimen/ButtonH"
                android:layout_margin="@dimen/ButtonM"
                android:layout_weight="1"
                android:background="@color/opaque_red"
                android:text="@string/Back"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/TextsizeB"/>


            <Button
                android:id="@+id/stock_print"
                android:layout_width="@dimen/ButtonW"
                android:layout_height="@dimen/ButtonH"
                android:layout_margin="@dimen/ButtonM"
                android:layout_weight="1"
                android:background="@color/ok"
                android:text="@string/Print"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/TextsizeB"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>